Add Vim Tmux Navigator integration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,24 +35,22 @@ bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
-#bind -r < resize-pane -L 10
-#bind -r > resize-pane -R 10
-#bind -r - resize-pane -D 10
-#bind -r + resize-pane -U 10
 
 # Navigates between panes (vim-like)
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# Commented. Replaced by Vim Tmux Navigator
+# section later on this file.
+#bind -n M-h select-pane -L
+#bind -n M-j select-pane -D
+#bind -n M-k select-pane -U
+#bind -n M-l select-pane -R
 
 # Navigates between windows (tabs)
-bind -n C-S-Left previous-window
-bind -n C-S-Right next-window
+bind -n M-H previous-window
+bind -n M-L next-window
 
 # Readjusts windows positions (tabs)
-bind -r S-Left swap-window -t -1 \; previous-window
-bind -r S-Right swap-window -t +1 \; next-window
+bind -n M-K swap-window -t -1 \; previous-window
+bind -n M-J swap-window -t +1 \; next-window
 
 # Kill current pane/window
 bind q confirm-before kill-pane
@@ -71,14 +69,15 @@ bind r source-file ~/.tmux.conf
 set -sg escape-time 0
 
 # Time in milliseconds for which tmux waits for commands after <prefix>
-set-option -g repeat-time 300
+set -g repeat-time 300
 
 # Time in milliseconds for which status line messages
 # and other indicators are displayed.
 set -g display-time 2000
 
-# Start pane numbers at 1 instead of 0.
-set-option -g pane-base-index 1
+# Start windows and panes numbers at 1 instead of 0.
+set -g base-index 1
+set -g pane-base-index 1
 
 # ---------------------------
 # Design Changes
@@ -110,6 +109,29 @@ set-option -g pane-base-index 1
 # Allow the title bar to adapt to whatever host you connect to
 #set -g set-titles on
 #set -g set-titles-string "#T"
+
+# ---------------------------
+# Vim Tmux Navigator Snippet
+# ---------------------------
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+#if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    #"bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+#if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    #"bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'M-h' select-pane -L
+bind-key -T copy-mode-vi 'M-j' select-pane -D
+bind-key -T copy-mode-vi 'M-k' select-pane -U
+bind-key -T copy-mode-vi 'M-l' select-pane -R
 
 # ---------------------------
 # Tmuxline
