Fix "cut line" command in VSCode-Vim

--- a/.config/Code/settings.json
+++ b/.config/Code/settings.json
@@ -172,7 +172,8 @@
     },
     // Cut line by pressing '\d'
     {
-      "before": ["<leader>", "d"]
+      "before": ["<leader>", "d"],
+      "after": ["\"", "+", "dd"]
     },
     // Comment line by pressing '++'
     {
