Update Nvim dotfiles

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -17,8 +17,12 @@
     "graphql": {
       "command": "graphql-lsp",
       "args": ["server", "-m", "stream"],
-      // customize filetypes to your needs
       "filetypes": ["typescript", "typescriptreact", "graphql", "prisma", "gql"]
+    },
+    "clangd": {
+      "command": "clangd",
+      "rootPatterns": ["compile_flags.txt", "compile_commands.json"],
+      "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"]
     }
   }
 
