--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Guilherme Rodz
-	email = gui.rodz.dev@gmail.com
+	email = guilherme.rodrigues.profissional@gmail.com
 
 [alias]
 	p = push
