chore: Changes for Git, ASDF, Vim, zshrc and VSCode

--- a/.gitconfig
+++ b/.gitconfig
@@ -35,3 +35,10 @@
 [pull]
 	# Fast=forward without creating new commits
 	ff = only
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+[init]
+	defaultBranch = master
